# PESA-equation-services

./: .env  Cargo.toml  Dockerfile-adder  Dockerfile-divider  Dockerfile-multiplier  Dockerfile-subtractor  README.md  build.rs  docker-compose.yml  init-services.sh
adder/: Cargo.toml
adder/src/: error.rs  main.rs  server.rs
divider/: Cargo.toml
divider/src/: main.rs  server.rs
equation/: Cargo.toml  build.rs
equation/src/: client.rs  config.rs  lib.rs  parse.rs  proto.rs  server.rs
multiplier/: Cargo.toml
multiplier/src/: main.rs  server.rs
orchestrator/: Cargo.toml
orchestrator/src/: client.rs  main.rs
protos/: equation.proto
subtractor/: Cargo.toml
subtractor/src/: main.rs  server.rs
