[package]
name = "equation-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "orchestrator",
    "adder",
    "subtractor",
    "multiplier",
    "divider"
]

[workspace.dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9.2"
