[workspace]
members = [
    "equation",
    "orchestrator",
    "adder",
    "subtractor",
    "multiplier",
    "divider"
]

resolver = "2"

[workspace.dependencies]
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
actix-rt = "2.9.0"


