[workspace]
members = [
    "equation",
    "orchestrator",
    "adder",
    "subtractor",
    "multiplier",
    "divider"
]

resolver = "2"

[workspace.dependencies]
async-trait = "0.1.73"
async-recursion = "1.0.4"
prost = "0.11.9"
tonic = "0.9.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
actix-rt = "2.9.0"
assert_matches = "1.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

