[package]
name = "equation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }

[build-dependencies]
tonic-build = "0.9.2"
